src/objects/ADvendio__TimeBasedGuaranteedAI__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__AdImpressions__c</fullName>
        <label>Ad Impressions</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdPrice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This relation is optionally.</description>
        <inlineHelpText>This relation is optionally.</inlineHelpText>
        <label>Ad Price</label>
        <referenceTo>ADvendio__Ad_price__c</referenceTo>
        <relationshipLabel>Time-Based Guaranteed AIs</relationshipLabel>
        <relationshipName>TimeBasedGuaranteedAIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdSpec__c</fullName>
        <label>Ad Spec</label>
        <referenceTo>ADvendio__Ad_Specs__c</referenceTo>
        <relationshipLabel>Time-Based Guaranteed AIs</relationshipLabel>
        <relationshipName>TimeBasedGuaranteedAIs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__BillingCategory__c</fullName>
        <label>Billing Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CPM</fullName>
                </value>
                <value>
                    <fullName>Fixed Price</fullName>
                </value>
                <value>
                    <fullName>CPC</fullName>
                </value>
                <value>
                    <fullName>CPO</fullName>
                </value>
                <value>
                    <fullName>CPD</fullName>
                </value>
                <value>
                    <fullName>CPW</fullName>
                </value>
                <value>
                    <fullName>CPMo</fullName>
                </value>
                <value>
                    <fullName>CPY</fullName>
                </value>
                <value>
                    <fullName>CPL</fullName>
                </value>
                <value>
                    <fullName>CPx</fullName>
                </value>
                <value>
                    <fullName>CPMSec</fullName>
                </value>
                <value>
                    <fullName>edition</fullName>
                </value>
                <value>
                    <fullName>allin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Time-Based Guaranteed AI</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__AdPrice__c</columns>
        <columns>ADvendio__AdSpec__c</columns>
        <columns>ADvendio__BillingCategory__c</columns>
        <columns>ADvendio__StartDate__c</columns>
        <columns>ADvendio__EndDate__c</columns>
        <columns>ADvendio__AdImpressions__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ADvendio__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GAI-{0}</displayFormat>
        <label>Time-Based Guaranteed AI No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time-Based Guaranteed AIs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>